--- a/jpconj/about.ui
+++ b/jpconj/about.ui
@@ -109,6 +109,9 @@
    <property name="scaledContents">
     <bool>false</bool>
    </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+   </property>
    <property name="wordWrap">
     <bool>true</bool>
    </property>
