--- a/jpconj/jpconjmain.ui
+++ b/jpconj/jpconjmain.ui
@@ -14,9 +14,9 @@
    <font>
     <family>DejaVu Sans</family>
     <pointsize>9</pointsize>
-    <weight>75</weight>
-    <italic>true</italic>
-    <bold>true</bold>
+    <weight>50</weight>
+    <italic>false</italic>
+    <bold>false</bold>
    </font>
   </property>
   <property name="windowTitle">
@@ -25,6 +25,9 @@
   <property name="windowIcon">
    <iconset>
     <normaloff>img/icon.png</normaloff>img/icon.png</iconset>
+  </property>
+  <property name="layoutDirection">
+   <enum>Qt::LeftToRight</enum>
   </property>
   <property name="documentMode">
    <bool>false</bool>
