--- a/jpconj/jpconjmain.ui
+++ b/jpconj/jpconjmain.ui
@@ -139,8 +139,6 @@
     <property name="title">
      <string>&amp;View</string>
     </property>
-    <addaction name="actionVerb_Conjugation"/>
-    <addaction name="actionToolBar"/>
    </widget>
    <widget class="QMenu" name="menu_Edit">
     <property name="title">
@@ -325,6 +323,11 @@
    </property>
    <property name="text">
     <string>ToolBar</string>
+   </property>
+  </action>
+  <action name="actionKiki">
+   <property name="text">
+    <string>kiki</string>
    </property>
   </action>
  </widget>
