--- a/jpconj/about.qrc
+++ b/jpconj/about.qrc
@@ -1,10 +1,16 @@
 <RCC>
     <qresource prefix="/">
-        <file>about/authors_en</file>
-        <file>about/licence_en</file>
-        <file>about/thanks_en</file>
         <file>about/authors_ar</file>
-        <file>about/licence_ar</file>
+        <file>about/authors_en</file>
+        <file>about/authors_fr</file>
+        <file>about/authors_ja</file>
+        <file>about/license_ar</file>
+        <file>about/license_en</file>
+        <file>about/license_fr</file>
+        <file>about/license_ja</file>
         <file>about/thanks_ar</file>
+        <file>about/thanks_en</file>
+        <file>about/thanks_fr</file>
+        <file>about/thanks_ja</file>
     </qresource>
 </RCC>
