--- a/jpconj/preference.ui
+++ b/jpconj/preference.ui
@@ -6,19 +6,40 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>527</width>
+    <width>500</width>
     <height>300</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>500</width>
+    <height>300</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>500</width>
+    <height>300</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Preferences</string>
   </property>
+  <property name="modal">
+   <bool>true</bool>
+  </property>
   <widget class="QDialogButtonBox" name="prefOK">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>241</y>
-     <width>491</width>
+     <x>10</x>
+     <y>250</y>
+     <width>471</width>
      <height>41</height>
     </rect>
    </property>
@@ -32,8 +53,8 @@
   <widget class="QComboBox" name="lang">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>23</y>
+     <x>260</x>
+     <y>20</y>
      <width>231</width>
      <height>31</height>
     </rect>
