--- a/jpconj/about.qrc
+++ b/jpconj/about.qrc
@@ -12,5 +12,9 @@
         <file>about/thanks_en</file>
         <file>about/thanks_fr</file>
         <file>about/thanks_ja</file>
+        <file>about/about_ar</file>
+        <file>about/about_en</file>
+        <file>about/about_fr</file>
+        <file>about/about_ja</file>
     </qresource>
 </RCC>
