--- a/jpconj/jpconjmain.ui
+++ b/jpconj/jpconjmain.ui
@@ -106,7 +106,13 @@
           </attribute>
           <layout class="QGridLayout" name="gridLayout_2">
            <item row="0" column="0">
-            <widget class="QTextBrowser" name="standardConj"/>
+            <widget class="QWebView" name="standardConj">
+             <property name="url">
+              <url>
+               <string>about:blank</string>
+              </url>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -122,7 +128,13 @@
           </attribute>
           <layout class="QGridLayout" name="gridLayout_3">
            <item row="0" column="0">
-            <widget class="QTextBrowser" name="basicConj"/>
+            <widget class="QWebView" name="basicConj">
+             <property name="url">
+              <url>
+               <string>about:blank</string>
+              </url>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -147,21 +159,11 @@
             <enum>QLayout::SetMaximumSize</enum>
            </property>
            <item row="0" column="0">
-            <widget class="QTableWidget" name="showt">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="editTriggers">
-              <set>QAbstractItemView::AnyKeyPressed</set>
-             </property>
-             <property name="rowCount">
-              <number>0</number>
-             </property>
-             <property name="columnCount">
-              <number>0</number>
+            <widget class="QWebView" name="complexConj">
+             <property name="url">
+              <url>
+               <string>about:blank</string>
+              </url>
              </property>
             </widget>
            </item>
@@ -407,6 +409,13 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QWebView</class>
+   <extends>QWidget</extends>
+   <header>QtWebKit/QWebView</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="icons.qrc"/>
  </resources>
