--- a/jpconj/jpconjmain.ui
+++ b/jpconj/jpconjmain.ui
@@ -107,10 +107,8 @@
           <layout class="QGridLayout" name="gridLayout_2">
            <item row="0" column="0">
             <widget class="QWebView" name="standardConj">
-             <property name="url">
-              <url>
-               <string>about:blank</string>
-              </url>
+             <property name="accessibleName">
+              <string notr="true"/>
              </property>
             </widget>
            </item>
@@ -129,6 +127,9 @@
           <layout class="QGridLayout" name="gridLayout_3">
            <item row="0" column="0">
             <widget class="QWebView" name="basicConj">
+             <property name="accessibleName">
+              <string notr="true"/>
+             </property>
              <property name="url">
               <url>
                <string>about:blank</string>
@@ -160,6 +161,9 @@
            </property>
            <item row="0" column="0">
             <widget class="QWebView" name="complexConj">
+             <property name="accessibleName">
+              <string notr="true"/>
+             </property>
              <property name="url">
               <url>
                <string>about:blank</string>
@@ -189,6 +193,8 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="actionExport_result"/>
+    <addaction name="separator"/>
     <addaction name="action_Close"/>
    </widget>
    <widget class="QMenu" name="menu_Help">
@@ -218,13 +224,13 @@
    <property name="minimumSize">
     <size>
      <width>0</width>
-     <height>25</height>
+     <height>0</height>
     </size>
    </property>
    <property name="baseSize">
     <size>
      <width>0</width>
-     <height>15</height>
+     <height>30</height>
     </size>
    </property>
    <property name="windowTitle">
@@ -235,6 +241,12 @@
    </property>
    <property name="allowedAreas">
     <set>Qt::TopToolBarArea</set>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>30</width>
+     <height>30</height>
+    </size>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -355,7 +367,7 @@
    <property name="icon">
     <iconset resource="icons.qrc">
      <normaloff>:/img/close.png</normaloff>
-     <normalon>:/img/icon.png</normalon>:/img/close.png</iconset>
+     <normalon>:/img/close.png</normalon>:/img/close.png</iconset>
    </property>
    <property name="text">
     <string>&amp;Close</string>
@@ -381,22 +393,6 @@
     <string>&amp;Preference</string>
    </property>
   </action>
-  <action name="actionAbout_Qt">
-   <property name="text">
-    <string>About &amp;Qt</string>
-   </property>
-  </action>
-  <action name="actionToolBar">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="checked">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>ToolBar</string>
-   </property>
-  </action>
   <action name="actionHelp_Content">
    <property name="icon">
     <iconset>
@@ -405,6 +401,14 @@
    </property>
    <property name="text">
     <string>Help Content</string>
+   </property>
+  </action>
+  <action name="actionExport_result">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Content Export</string>
    </property>
   </action>
  </widget>
