--- a/jpconj/icons.qrc
+++ b/jpconj/icons.qrc
@@ -5,5 +5,6 @@
         <file>img/icon.png</file>
         <file>img/about.png</file>
         <file>img/help.png</file>
+        <file>img/export.png</file>
     </qresource>
 </RCC>
