close DzCoding/JapKatsuyou#43 ... add print function

--- a/jpconj/icons.qrc
+++ b/jpconj/icons.qrc
@@ -6,5 +6,6 @@
         <file>img/about.png</file>
         <file>img/help.png</file>
         <file>img/export.png</file>
+        <file>img/print.png</file>
     </qresource>
 </RCC>
